charts alignment and ui issue fixes

--- a/src/app/dashboards/cliniciananalysis/cliniciananalysis.component.scss
+++ b/src/app/dashboards/cliniciananalysis/cliniciananalysis.component.scss
@@ -90,3 +90,6 @@ select.proSelect {
 .cl-card-height-new{
     height: 350px;
 }
+.newPatientsSingle .card-body .chart{
+    margin-top: 90px;
+}
